--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,10 @@
 *{
     padding: 0;
     margin: 0;
+    font-family: sans-serif;
 }
 nav{
-    padding: 0;
+    padding: 20px;
     margin: 0;
     text-align: center;
     background-color: gray;
@@ -11,4 +12,27 @@ nav{
 
 main{
     padding: 0 10%;
+}
+
+main > h1, main > h3{
+    text-align: center;
+}
+
+ol{
+    list-style: none;
+    text-align: center;
+}
+
+li{
+    background-color: aquamarine;
+    padding: 20px ;
+    margin: 15px 250px;
+
+}
+
+footer{
+    padding: 20px;
+    margin: 0;
+    text-align: center;
+    background-color: gray;
 }
